--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
 <body>
+    <ul>
+        <li><a href="#">Обо мне</a></li>
+        <li><a href="#">Портфолио</a></li>
+        <li><a href="#">Этапы работ</a></li>
+        <li><a href="#">Цены</a></li>
+        <li><a href="#">Обратная связь</a></li>
+    </ul>
+    <ul>
+        <li><a href="tel:+79237777777">8 923 777-77-77</a></li>
+        <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+    </ul>
+    <img src="img/photo.png" alt="Photo">
+<div>
     <p>Александр Антропов</p>
     <h1>web-разработчик</h1>
+</div>
 </body>
 </html>
