--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
+
 <body>
-    <ul>
-        <li><a href="#">Обо мне</a></li>
-        <li><a href="#">Портфолио</a></li>
-        <li><a href="#">Этапы работ</a></li>
-        <li><a href="#">Цены</a></li>
-        <li><a href="#">Обратная связь</a></li>
-    </ul>
-    <ul>
-        <li><a href="tel:+79237777777">8 923 777-77-77</a></li>
-        <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
-    </ul>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Обо мне</a></li>
+                <li><a href="#">Портфолио</a></li>
+                <li><a href="#">Этапы работ</a></li>
+                <li><a href="#">Цены</a></li>
+                <li><a href="#">Обратная связь</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="tel:+79237777777">8 923 777-77-77</a></li>
+            <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+        </ul>
+    </header>
     <img src="img/photo.png" alt="Photo">
-<div>
-    <p>Александр Антропов</p>
-    <h1>web-разработчик</h1>
-</div>
+    <main>
+        <div>
+            <p>Александр Антропов</p>
+            <h1>web-разработчик</h1>
+        </div>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
