--- a/index.html
+++ b/index.html
@@ -5,33 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
-            </ul>
-        </nav>
-        <ul class="nav">
-            <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
-            <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
-        </ul>
-    </header>
-    <img class="photo" src="img/photo.png" alt="Photo">
-    <main>
-        <div>
-            <p class="name">Александр Антропов</p>
-            <h1 class="title-h1">web-разработчик</h1>
+    <div class="dark">
+        <div class="wrapper">
+            <header>
+                <nav>
+                    <ul class="nav">
+                        <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
+                    </ul>
+                </nav>
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
+                    <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+                </ul>
+            </header>
+            <img class="photo" src="img/photo.png" alt="Photo">
+            <main>
+                <div>
+                    <p class="name">Александр Антропов</p>
+                    <h1 class="title-h1">web-разработчик</h1>
+                </div>
+            </main>
         </div>
-    </main>
-    <footer></footer>
+
+        <footer></footer>
+    </div>
 </body>
 
 </html>
