grid css and transition

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <svg class="circle circle-nav" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="126.5" cy="126.5" r="126.5" />
                         </svg>
-                        <ul class="nav nav-info">
+                        <ul class="nav nav-social">
                             <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
                             <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
                             <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="skill-item">
                         <h3 class="title-h3">WORDPRESS</h3>
-                        <p class="description">Разработка сайтов - от блога до интернет магазина</p>
+                        <p class="description">Разработка сайтов - от блога до&nbsp;интернет магазина</p>
                     </div>
                     <div class="skill-item">
                         <h3 class="title-h3">SEO продвижение</h3>
@@ -76,29 +76,33 @@
             </main>
             <section class="section-about">
                 <div class="about">
-                    <div class="about-item">
+                    <div class="about-item about-title">
                         <p>Обо мне</p>
                     </div>
-                    <div class="about-item">
-                        <p>Создаю только эффективные решения, которые работают на результат: от одностраничных сайтов,
+                    <div class="about-item about-description">
+                        <p>Создаю только эффективные решения, которые работают на результат: от&nbsp;одностраничных
+                            сайтов,
                             до крупных интернет-порталов.</p>
                     </div>
-                    <div class="about-item">
+                    <div class="about-item about-01">
                         <h3 class="title-h3">Контроль</h3>
-                        <p class="description">Предоставление результатов на каждом этапе работы с возможностью внести
+                        <p class="description">Предоставление результатов на&nbsp;каждом этапе работы
+                            с&nbsp;возможностью внести
                             правки</p>
                     </div>
-                    <div class="about-item">
+                    <div class="about-item about-02">
                         <h3 class="title-h3">Ответственность</h3>
-                        <p class="description">Фриланс как основная деятельность, что означает полную отдачу в процессе
+                        <p class="description">Фриланс как основная деятельность, что означает полную отдачу
+                            в&nbsp;процессе
                             работы над заказом</p>
                     </div>
-                    <div class="about-item">
+                    <div class="about-item about-03">
                         <h3 class="title-h3">Исполнительность</h3>
-                        <p class="description">Внимательность ко всем требованиям заказчика и прояснение любых моментов
+                        <p class="description">Внимательность ко всем требованиям заказчика и&nbsp;прояснение любых
+                            моментов
                         </p>
                     </div>
-                    <div class="about-item">
+                    <div class="about-item about-04">
                         <h3 class="title-h3">Качество</h3>
                         <p class="description">Высокое качество как графических материалов, так и внутренних алгоритмов
                             работы сайта</p>
