--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -364,6 +365,40 @@
                     </div>
                 </div>
             </section>
+            <section class="section-tech">
+                <div class="tech">
+                    <div class="tech-item html">
+                        <img class="tech-image" src="img/tech/html.svg" alt="HTML" title="Язык гипертекстовой разметки">
+                    </div>
+                    <div class="tech-item css">
+                        <img class="tech-image" src="img/tech/css.svg" alt="CSS" title="Каскадные таблицы стилей">
+                    </div>
+                    <div class="tech-item js">
+                        <img class="tech-image" src="img/tech/javascript.svg" alt="JavaScript"
+                            title="Язык программирования высокого уровня, использующийся для придания интерактивности веб-страницам">
+                    </div>
+                    <div class="tech-item jquery">
+                        <img class="tech-image" src="img/tech/jquery.svg" alt="jQuery"
+                            title="Популярная библиотека JavaScript">
+                    </div>
+                    <div class="tech-item bootstrap">
+                        <img class="tech-image" src="img/tech/bootstrap.svg" alt="Bootstrap"
+                            title="Популярный CSS фреймворк">
+                    </div>
+                    <div class="tech-item php">
+                        <img class="tech-image" src="img/tech/php.svg" alt="PHP"
+                            title="Серверный язык программирования">
+                    </div>
+                    <div class="tech-item vue">
+                        <img class="tech-image" src="img/tech/vue.svg" alt="VueJS"
+                            title="JS-фреймворк для создания пользовательских интерфейсов">
+                    </div>
+                    <div class="tech-item wp">
+                        <img class="tech-image" src="img/tech/wordpress.svg" alt="WordPress"
+                            title="Популярная CMS для создания блогов">
+                    </div>
+                </div>
+            </section>
         </div>
         <footer></footer>
     </div>
@@ -375,6 +410,14 @@
             $("#tabs").tabs({
                 active: 0
             });
+            $(document).tooltip();
+        });
+        $(".tech-image").tooltip({
+            position: {
+                my: "center top",
+                at: "center bottom-10",
+                collision: "none"
+            }
         });
     </script>
 </body>
