--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
                         </div>
                         <div>
                             <h3 class="title-h3">Всегда на связи</h3>
-                            <p class="advantages-description">Не теряюсь и не проматываю сроки. Подхожу ответственно</p>
+                            <p class="advantages-description">Не теряюсь и не проматываю сроки.&nbspПодхожу ответственно
+                            </p>
                         </div>
                     </div>
                     <div class="advantages-item">
@@ -399,8 +400,98 @@
                     </div>
                 </div>
             </section>
+            <section class="section-tarif">
+                <div class="tarif">
+                    <div class="tarif-title">
+                        <div>
+                            <svg class="circle circle-tarif" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="126.5" cy="126.5" r="126.5" />
+                            </svg>
+                            <p>Тарифы</p>
+                        </div>
+                    </div>
+                    <div class="tarif-description">
+                        <p>Представленные ниже цены зависят не&nbspтолько от того какой сайт вы хотите. Конечная цена
+                            будет
+                            озвучена после прочтения Вашего ТЗ</p>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-name">Разработка<br>лэндинга или сайт визитки</p>
+                            <p class="tarif-text">Небольшой сайт состоящий из одной страницы</p>
+                        </div>
+                        <div class="tarif-footer">
+                            <p class="project"><span>Обсудить проект</span><span class="project-img"></span></p>
+                        </div>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-pack">Что входит</p>
+                            <ul class="tarif-list">
+                                <li class="tarif-list-item">Сайт на CMS WordPress</li>
+                                <li class="tarif-list-item">Одна посадочная страница</li>
+                                <li class="tarif-list-item">От 7 дней</li>
+                            </ul>
+                        </div>
+                        <div class="tarif-footer">
+                            <svg class="circle circle-price" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="126.5" cy="126.5" r="126.5" />
+                            </svg>
+                            <p class="tarif-price">От 7 000 Р</p>
+                        </div>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-name">Разработка<br>корпоративного сайта</p>
+                            <p class="tarif-text">Небольшой сайт с n-количеством страниц</p>
+                        </div>
+                        <div class="tarif-footer">
+                            <p class="project"><span>Обсудить проект</span><span class="project-img"></span></p>
+                        </div>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-pack">Что входит</p>
+                            <ul class="tarif-list">
+                                <li class="tarif-list-item">Сайт на CMS WordPress</li>
+                                <li class="tarif-list-item">От 2-10 страниц</li>
+                                <li class="tarif-list-item">От 15 дней</li>
+                            </ul>
+                        </div>
+                        <div class="tarif-footer">
+                            <p class="tarif-price">От 10 000 Р</p>
+                        </div>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-name">Разработка<br>интернет - магазина</p>
+                            <p class="tarif-text">Полноценный каталог вашей продукции</p>
+                        </div>
+                        <div class="tarif-footer">
+                            <p class="project"><span>Обсудить проект</span><span class="project-img"></span></p>
+                        </div>
+                    </div>
+                    <div class="tarif-item">
+                        <div class="tarif-header">
+                            <p class="tarif-pack">Что входит</p>
+                            <ul class="tarif-list">
+                                <li class="tarif-list-item">Сайт на CMS WordPress</li>
+                                <li class="tarif-list-item">От 2-10 страниц, корзина, карточка товара</li>
+                                <li class="tarif-list-item">От 20 дней</li>
+                            </ul>
+                        </div>
+                        <div class="tarif-footer">
+                            <svg class="circle circle-price" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="126.5" cy="126.5" r="126.5" />
+                            </svg>
+                            <p class="tarif-price">От 15 000 Р</p>
+                        </div>
+                    </div>
+                </div>
         </div>
-        <footer></footer>
+        </section>
+    </div>
+    <footer></footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
