--- a/index.html
+++ b/index.html
@@ -490,31 +490,34 @@
                 </div>
         </div>
         </section>
-        <section class="section-form">
-            <div class="form">
-                <div class="form-title">
-                    <p>
-                        Расскажите о своем проекте
-                    </p>
-                </div>
-                <div class="form-description">
-                    <p>Воспользуйтесь формой обратной связи, чтобы обсудить ваш проект, заполните все поля, и я свяжусь
-                        с&nbspвами в ближайшее время</p>
-                </div>
-                <div class="form-item">
-                    <ul class="nav nav-social">
-                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
-                    </ul>
-                </div>
-                <div class="form-item">
-                    <form>
-                        <div>
+        <div class="wrapper">
+            <section class="section-form">
+                <div class="form">
+                    <div class="form-title">
+                        <svg class="circle circle-form" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="126.5" cy="126.5" r="126.5" />
+                        </svg>
+                        <svg class="triangle triangle-form" width="66" height="72" viewBox="0 0 66 72"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33 0L65.909 71.25H0.0910339L33 0Z" />
+                        </svg>
+                        <p>Расскажите<br>о своем проекте</p>
+                    </div>
+                    <div class="form-description">
+                        <p>Воспользуйтесь формой обратной связи,&nbspчтобы обсудить ваш проект, заполните все поля, и я
+                            свяжусь<br>с вами в ближайшее время</p>
+                    </div>
+                    <div class="form-item form-social">
+                        <ul class="nav nav-social">
+                            <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
+                        </ul>
+                    </div>
+                    <div class="form-item">
+                        <form>
                             <label>Телефон или почта</label>
                             <input type="text" placeholder="Введите телефон">
-                        </div>
-                        <div>
                             <label for="communicate">Выберите удобный способ связи</label>
                             <select name="communicate" id="communicate">
                                 <option>Telegram</option>
@@ -523,31 +526,32 @@
                                 <option>Звонок на телефон</option>
                                 <option>SMS сообщение</option>
                             </select>
-                        </div>
-                        <input type="submit" value="Отправить">
-                    </form>
+                            <input type="submit" value="Отправить">
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <footer>
-            <div class="footer-top">
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
-                </ul>
-                <ul class="nav nav-info">
-                    <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
-                    <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
-                </ul>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2020, Все права защищены</p>
-                <p>Сделано в рамках курса учебной платформы<a href="">Frontend Blok</a></p>
-            </div>
-        </footer>
+            </section>
+            <footer>
+                <div class="footer-top">
+                    <ul class="nav">
+                        <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
+                    </ul>
+                    <ul class="nav nav-info">
+                        <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
+                        <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-bottom">
+                    <p>&copy; 2020, Все права защищены</p>
+                    <p>Сделано в рамках курса учебной платформы <a class="footer-link" href="">Frontend Blok</a></p>
+                </div>
+            </footer>
+        </div>
     </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
